--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@ body {
   padding: 2rem;
 }
 
+
+
 .carousel .slide {
   display: flex;
   justify-content: center;
@@ -28,4 +30,8 @@ body {
   /* max-width: 100%; */
   /* max-height: 100%; */
   object-fit: cover;
+}
+
+.carousel .control-dots .dot {
+  background-color: red;
 }
