--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,16 @@ body {
   padding: 2rem;
 }
 
-
-
 .carousel .slide {
   display: flex;
   justify-content: center;
+}
+
+@media only screen and (max-width: 480px) {
+  .bg1 {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .carousel-item-size {
