--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@ body {
   padding: 2rem;
 }
 
+.mobile-1 {
+  background: linear-gradient(to bottom, #000000, #434343);
+}
+
+.mobile-2 {
+  background: linear-gradient(to bottom, #434343, #000000);
+}
+
 .carousel .slide {
   display: flex;
   justify-content: center;
