--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,13 @@ body {
 
 .mobile-1 {
   background: linear-gradient(to bottom, #000428 , #004e92);
+  
+  @media screen and (max-width:556px) {
+    background-image: url('./assets/yourstruly9.jpeg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+  }
 }
 
 .mobile-2 {
