--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,11 @@
 @import 'tailwindcss/utilities';
 
 body {
-  background: #004e92;
+  background: #000000;
+}
+
+.footer {
+  background: linear-gradient(to top, #000000, #434343);
 }
 
 .carousel-size-1 {
@@ -17,7 +21,7 @@ body {
 }
 
 .mobile-1 {
-  background: linear-gradient(to bottom, #000428, #004e92);
+  background: linear-gradient(to bottom, #000000, #434343);
 }
 
 @media screen and (max-width: 556px) {
@@ -29,10 +33,6 @@ body {
 }
 
 
-
-.mobile-2 {
-  background: linear-gradient(to bottom, #000428 , #004e92);
-}
 
 .carousel .slide {
   display: flex;
