--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,12 @@ code {
   font-style: normal;
 }
 
+.aboreto-regular {
+  font-family: "Aboreto", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 
 
