pic change, font change

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,12 @@ code {
   font-style: normal;
 }
 
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
 
 
 
