--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
 
 @media screen and (max-width: 556px) {
   .mobile-1 {
-    background-image: url('./assets/yourstruly9.jpeg');
+    background-image: url('./assets/yourstruly1.jpg');
     background-size: contain;
     background-repeat: no-repeat;
   }
