--- a/src/index.css
+++ b/src/index.css
@@ -50,11 +50,18 @@ code {
   font-style: normal;
 }
 
-.poppins-semibold {
+.poppins-medium {
   font-family: "Poppins", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   font-style: normal;
 }
+
+.poppins-thin {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
 
 
 
