--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-
   scroll-behavior: smooth;
   
 }
@@ -18,6 +17,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fading {
+  animation: fadeInOut 2s infinite;
 }
 
 .rubik-mono-one-regular {
